--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Easter Mystery</title>
 </head>
 <body>
-    <a color="white">优惠券： Happy-Easter-Day</a>
+    <p style="color: white;">优惠券： Happy-Easter-Day</p>
 </body>
 </html>
